# lv_demo_hub

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arm_run.sh  base_main.h  base_main_linuxarm.h  base_main_ubuntu.h  base_main_windows.h  build_all.sh  lv_conf.h  lv_demo_hub.sln  lv_demo_hub.vcxproj  lv_demo_hub.vcxproj.filters  lv_drv_conf.h  lv_lib_100ask_conf.h  main.cpp  my_conf.h  my_def.h
application/: CMakeLists.txt  wm_application.cpp  wm_application.h
application/app/: app.h
application/app/3d_printer/: ui.c  ui.h  ui_font_Small_Font.c  ui_helpers.c  ui_helpers.h  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_btn_main_off_png.c  ui_img_btn_main_on_png.c  ui_img_btn_move_png.c  ui_img_btn_pad_bottom_png.c  ui_img_btn_pad_top_png.c  ui_img_btn_print_down_png.c  ui_img_btn_print_png.c  ui_img_btn_print_top_off_png.c  ui_img_btn_setting_png.c  ui_img_btn_z_botton_png.c  ui_img_btn_z_top_png.c  ui_img_icn_bed_png.c  ui_img_icn_head_png.c  ui_img_icn_pause_png.c  ui_img_icn_pc_png.c  ui_img_icn_stop_png.c  ui_img_icn_time_1_png.c  ui_img_icn_time_2_png.c  ui_img_icn_usb_png.c  ui_img_icn_wifi_png.c  ui_img_print_view_bg_png.c  ui_img_print_view_front_png.c  ui_img_roller_bg_png.c
application/app/anim/: app_anim.c  app_anim_1.c  app_anim_2.c  app_anim_3.c  (+1 more)
application/hw_app/: hw_app.h
application/sys/: wm_body.cpp  wm_body.h  wm_explain.cpp  wm_explain.h  wm_footer.cpp  wm_footer.h  wm_head.cpp  wm_head.h  wm_home_btn.cpp  wm_home_btn.h  wm_monitor.cpp  wm_monitor.h  wm_settings.cpp  wm_settings.h
(+309 files in other folders)
